# TradingPilot

./: .env.example  .gitignore  Dockerfile  PROJECT_PROGRESS.md  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_ingest_ops_tables.py  0003_ingest_queue_indexes.py  0004_fx_snapshot_group.py  0005_auth_api_keys.py  0006_market_news_item.py  0008_trade_overrides.py  0009_snapshot_indexes.py
docs/plans/: 2026-01-19-tradepilot-data-layer-integration-plan.md
scripts/: demo_seed.sql
tests/: test_audit.py  test_chatops.py  test_cli.py  test_config.py  test_dependencies.py  test_emsx.py  test_health.py  test_metrics.py  test_risk_checks.py  test_trade_api.py  test_trade_models.py  test_trade_service.py
tests/api/: test_cors.py  test_ingest_poke.py  test_query_book.py  test_query_book_summary.py  test_rate_limit.py  test_request_limits.py
tests/audit/: test_db_writer.py  test_retention.py  test_retention_expanded.py
tests/auth/: test_api_keys.py  test_auth_dependency.py  test_roles.py
tests/chatops/: test_slack_approvals.py  test_slack_commands.py
tests/compliance/: test_restricted.py
tests/data/: test_db_provider.py  test_provider.py
tests/db/: test_alembic_upgrade.py  test_fx_snapshot_group.py  test_models_exist.py
tests/gating/: test_freshness.py  test_override.py
tests/ingest/: test_adapter_factory.py  test_adapters.py  test_canonical.py  test_diff.py  test_enqueuer.py  test_fx_api_adapter.py  test_limits_api_adapter.py  (+14 more)
tradepilot/: __init__.py  cli.py  config.py  logging.py  main.py  metrics.py
(+83 files in other folders)
